force-app/main/default/objects/Maintenance_Part__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Part_Inventory__c</referenceTo>
    <relationshipLabel>Maintenance Parts</relationshipLabel>
    <relationshipName>Maintenance_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>