force-app/main/default/objects/Maintenance_Part__c/fields/Quantity_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Utilized__c</fullName>
    <label>Quantity Utilized</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>