force-app/main/default/objects/Maintenance_Part__c/validationRules/Check_part_quantity_in_stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_part_quantity_in_stock</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Utilized__c  &gt; (Part__r.Quantity_In_Stock__c + PRIORVALUE(Quantity_Utilized__c))</errorConditionFormula>
    <errorMessage>Selected Part is not in stock or entered quantity is more than in stock</errorMessage>
</ValidationRule>